// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ClusterActionsDropdown /> admin console url does not exist should render (no console) 1`] = `
<Dropdown
  dropdownItems={
    Array [
      <DropdownItem
        component="button"
        isDisabled={true}
        tooltip={
          <span>
            Admin console is not yet available for this cluster
          </span>
        }
      >
        Launch Admin Console
      </DropdownItem>,
      <DropdownItem
        component="button"
        onClick={[Function]}
      >
        Edit Display Name
      </DropdownItem>,
      <DropdownItem
        component="button"
        onClick={[Function]}
      >
        Add Console URL
      </DropdownItem>,
    ]
  }
  isOpen={false}
  onSelect={[Function]}
  position="right"
  toggle={
    <DropdownToggle
      onToggle={[Function]}
    >
      Actions
    </DropdownToggle>
  }
/>
`;

exports[`<ClusterActionsDropdown /> cluster with state not ready should render (not ready) 1`] = `
<Dropdown
  dropdownItems={
    Array [
      <DropdownItem
        component="button"
        isDisabled={true}
        tooltip={
          <span>
            Admin console is not yet available for this cluster
          </span>
        }
      >
        Launch Admin Console
      </DropdownItem>,
      <DropdownItem
        component="button"
        onClick={[Function]}
      >
        Edit Display Name
      </DropdownItem>,
      <DropdownItem
        component="button"
        isDisabled={true}
        tooltip={
          <span>
            This cluster is not ready
          </span>
        }
      >
        Scale Cluster
      </DropdownItem>,
      <DropdownItem
        component="button"
        onClick={[Function]}
      >
        Delete Cluster
      </DropdownItem>,
    ]
  }
  isOpen={false}
  onSelect={[Function]}
  position="right"
  toggle={
    <DropdownToggle
      onToggle={[Function]}
    >
      Actions
    </DropdownToggle>
  }
/>
`;

exports[`<ClusterActionsDropdown /> cluster with state ready and console url should render 1`] = `
<Dropdown
  dropdownItems={
    Array [
      <DropdownItem
        href="www.testuhc.com"
        rel="noreferrer"
        target="_blank"
      >
        Launch Admin Console
      </DropdownItem>,
      <DropdownItem
        component="button"
        onClick={[Function]}
      >
        Edit Display Name
      </DropdownItem>,
      <DropdownItem
        component="button"
        onClick={[Function]}
      >
        Scale Cluster
      </DropdownItem>,
      <DropdownItem
        component="button"
        onClick={[Function]}
      >
        Delete Cluster
      </DropdownItem>,
    ]
  }
  isOpen={false}
  onSelect={[Function]}
  position="right"
  toggle={
    <DropdownToggle
      onToggle={[Function]}
    >
      Actions
    </DropdownToggle>
  }
/>
`;

exports[`<ClusterActionsDropdown /> cluster with state uninstalling should render (uninstalling) 1`] = `
<Dropdown
  dropdownItems={
    Array [
      <DropdownItem
        component="button"
        isDisabled={true}
        tooltip={
          <span>
            The cluster is being uninstalled
          </span>
        }
      >
        Launch Admin Console
      </DropdownItem>,
      <DropdownItem
        component="button"
        isDisabled={true}
        tooltip={
          <span>
            The cluster is being uninstalled
          </span>
        }
      >
        Edit Display Name
      </DropdownItem>,
      <DropdownItem
        component="button"
        isDisabled={true}
        tooltip={
          <span>
            The cluster is being uninstalled
          </span>
        }
      >
        Scale Cluster
      </DropdownItem>,
      <DropdownItem
        component="button"
        isDisabled={true}
        tooltip={
          <span>
            The cluster is being uninstalled
          </span>
        }
      >
        Delete Cluster
      </DropdownItem>,
    ]
  }
  isOpen={false}
  onSelect={[Function]}
  position="right"
  toggle={
    <DropdownToggle
      onToggle={[Function]}
    >
      Actions
    </DropdownToggle>
  }
/>
`;

exports[`<ClusterActionsDropdown /> read only cluster should render correctly 1`] = `
<Dropdown
  dropdownItems={
    Array [
      <DropdownItem
        href="www.testuhc.com"
        rel="noreferrer"
        target="_blank"
      >
        Launch Admin Console
      </DropdownItem>,
    ]
  }
  isOpen={false}
  onSelect={[Function]}
  position="right"
  toggle={
    <DropdownToggle
      onToggle={[Function]}
    >
      Actions
    </DropdownToggle>
  }
/>
`;

exports[`<ClusterActionsDropdown /> self managed cluster should render (self managed) 1`] = `
<Dropdown
  dropdownItems={
    Array [
      <DropdownItem
        component="button"
        isDisabled={true}
        tooltip={
          <span>
            Admin console is not yet available for this cluster
          </span>
        }
      >
        Launch Admin Console
      </DropdownItem>,
      <DropdownItem
        component="button"
        onClick={[Function]}
      >
        Edit Display Name
      </DropdownItem>,
      <DropdownItem
        component="button"
        onClick={[Function]}
      >
        Add Console URL
      </DropdownItem>,
    ]
  }
  isOpen={false}
  onSelect={[Function]}
  position="right"
  toggle={
    <DropdownToggle
      onToggle={[Function]}
    >
      Actions
    </DropdownToggle>
  }
/>
`;
